--- a/web/view/statistic/goodsClick.html
+++ b/web/view/statistic/goodsClick.html
@@ -29,6 +29,41 @@
                 <h1>鏡框點擊率</h1>
             </section>
             <section class="content">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box box-info" style="padding: 5px;">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">篩選條件</h3>
+                            </div>
+                            <div class="box-body row">
+                                <div id="errDiv" class="form-group has-error" style="display: none;">
+                                    <label id="errMsg" class="col-sm-12">查無資料</label>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label class="control-label col-md-2" for="startDatePicker">開始日期</label>
+                                    <div class="input-group col-md-8">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-clock-o"></i>
+                                        </div>
+                                        <input type="text" class="form-control pull-right" id="startDatePicker">
+                                    </div>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label class="control-label col-md-2" for="endDatePicker">結束日期</label>
+                                    <div class="input-group col-md-8">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-clock-o"></i>
+                                        </div>
+                                        <input type="text" class="form-control pull-right" id="endDatePicker">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box-footer">
+                                <button class="btn btn-success" onclick="queryByDate()">確定</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Main content -->
                 <div class="row">
                     <div class="col-xs-12">
@@ -41,8 +76,8 @@
                                             <th>鏡框名稱</th>
                                             <th>鏡框型號</th>
                                             <th>鏡框框形</th>
-                                            <th>鏡框顏色</th>
-                                            <th>鏡框材質</th>
+                                            <th>建立時間</th>
+                                            <th>最後更新時間</th>
                                             <th>詳細內容</th>
                                         </tr>
                                     </thead>
