--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -55,7 +55,7 @@
 
                                     <!--birthday-->
                                     <div id="birthdayDiv" class="form-group">
-                                        <label for="gender" class="col-sm-2 control-label">性別</label>
+                                        <label for="gender" class="col-sm-2 control-label">生日</label>
                                         <div class="col-sm-10">
                                             <div class="input-group">
                                                 <div class="input-group-addon">
@@ -90,6 +90,14 @@
                                         </div>
                                     </div>
 
+                                    <!--address-->
+                                    <div id="addressDiv" class="form-group">
+                                        <label for="address" class="col-sm-2 control-label">地址</label>
+                                        <div class="col-sm-10">
+                                            <input id="address" name="address" class="form-control" placeholder="地址">
+                                        </div>
+                                    </div>
+                                    
                                     <!-- /.box-body -->
                                     <div class="box-footer" style="text-align: right;">
                                         <a href="../controller/userController.php" class="btn btn-warning">取消</a>
