--- a/web/view/user/userShoppingRecord.html
+++ b/web/view/user/userShoppingRecord.html
@@ -3,6 +3,33 @@
 
 <head>
     \{include file="../common/resource.html"\}
+<script>
+    function deleteTran(tranId){
+        BootstrapDialog.show({
+            title:'提醒',
+            message: '確認是否刪除使用者資料',
+            buttons: [{
+                label: '確定',
+                cssClass: 'btn-danger',
+                action: function(){
+                    $.ajax({
+                        type: "POST",
+                        url: "../controller/userController.php",
+                        data: {'action': 'userShoppingRecordDelete', 'tranId': tranId},
+                        success: function() {
+                            location.reload();
+                        }
+                    });
+                }
+            },{
+                label: '取消',
+                action: function(dialogItself){
+                    dialogItself.close();
+                }
+            }]
+        });
+    }
+</script>
 </head>
 
 <body class="hold-transition skin-yellow sidebar-mini">
@@ -25,43 +52,53 @@
                         \{/if\}
 
                          <ul class="nav nav-tabs">
-                          <li><a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userData.userId\}">會員詳細資料</a></li>
+                          <li><a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userId\}">會員詳細資料</a></li>
                           <li class="active"><a href="#">會員購物資料</a></li>
-                          <li><a href="../controller/userController.php?action=userCourseRecordPrepare&userId=\{$userData.userId\}">會員課程資料</a></li>
-                        </ul> 
+                          <li><a href="../controller/userController.php?action=userCourseRecordPrepare&userId=\{$userId\}">會員課程資料</a></li>
+                        </ul>
 
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">會員購物資料</h3>
+                                <h3 class="box-title">購物紀錄</h3>
                             </div>
-                            <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/userController.php">
-                                <div class="box-body">
-                                    <!-- name -->
-                                    <div id="userNameDiv" class="form-group">
-                                        <label for="userName" class="col-sm-2 control-label">使用者姓名</label>
-                                        <div class="col-sm-10">
-                                            <input id="userName" name="userName" class="form-control" placeholder="\{$userData.userName\}">
-                                        </div>
-                                    </div>
+                            <div class="box-body">
+                                <table class="table table-striped" id="tranListTable">
+                                    <thead>
+                                        <tr style="background-color: #00c0ef; color: #fff;">
+                                            <th>交易日期</th>
+                                            <th>結帳狀態</th>
+                                            <th>交易金額</th>
+                                            <th>獲得點數</th>
+                                            <th>交易評分</th>
+                                            <th>最後更新時間</th>
+                                            <th>操作選項</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                         \{foreach from=$allTranData item=tran\}
+                                            <tr>
+                                                <td>\{$tran.createTime\}</td>
+                                                <td>\{$tran.checkState\}</td>
+                                                <td>\{$tran.price\}</td>
+                                                <td>\{$tran.point\}</td>
+                                                <td>\{$tran.score\}</td>
+                                                <td>\{$tran.lastUpdateTime\}</td>
+                                                <td>
 
-                                    <!--phoneNumber-->
-                                    <div id="phoneDiv" class="form-group">
-                                        <label for="password" class="col-sm-2 control-label">手機號碼</label>
-                                        <div class="col-sm-10">
-                                            <input id="phone" name="phone" class="form-control" placeholder="\{$userData.phone\}">
-                                        </div>
-                                    </div>
+                                                    <a href="../controller/userController.php?action=userShoppingRecordEdit&tranId=\{$tran.tranId\} ">
+                                                        <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
+                                                    </a>&nbsp;
 
-                                    <!-- /.box-body -->
-                                    <div class="box-footer" style="text-align: right;">
-                                        <input type="hidden" name="action" value="userSearch">
-                                        <button type="submit" class="btn btn-primary">確定</button>
-                                    </div>
-                                </div>
-                            </form>
+                                                    <a href="#">
+                                                        <button class="btn btn-sm btn-danger" onclick="deleteTran('\{$tran.tranId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                         \{/foreach\}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-
 
                     </div>
                 </div>
