--- a/web/view/user/userShoppingRecordEdit.html
+++ b/web/view/user/userShoppingRecordEdit.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -18,11 +19,15 @@ $(document).ready(function() {
                     'glass': glassData,
                     'len': lenData,
                     'part': partData};
+    var allTranDetailData = \{$allTranDetailData|json_encode\};
+    var tranData = \{$tranData|json_encode\};
 
-
-
-    var num = 1;
+    var num = 0;
+    var hidden = "hidden";
     $(document).on('click', '.shoppingRecordBtn',function(){
+            if(num != 0)
+                hidden = "";
+
             $(`#box${num}`).html(`
                 <div class="box-body">
                     <div id="itemTypeDiv" class="form-group">
@@ -56,8 +61,9 @@ $(document).ready(function() {
                 </div>
 
                 <div class="box-footer" style="text-align: right;">
-                    <a id="deleteBtn_${num}" class="deleteShoppingRecordBtn btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
-                    <a class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
+                    <a id="deleteBtn_${num}" class="deleteShoppingRecordBtn btn btn-sm btn-danger ${hidden}"><i class="glyphicon glyphicon-remove"></i></a>
+                    <a id="shoppingRecordBtn_${num}" class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
+                    <input type="hidden" id="state_${num}" name="state_${num}" value="insert" class="form-control">
                 </div>
 
             `).removeClass("hidden");
@@ -70,14 +76,26 @@ $(document).ready(function() {
             $('input[name=tranDetailLength]').val(num);
     });
 
-    //
+    // delete button event
     $(document).on('click', '.deleteShoppingRecordBtn',function(){
         var toBeDeleteBoxNum = $(this).attr('id').split('_')[1];
-        $(`#box${toBeDeleteBoxNum}`).remove();
+
+        console.log($(`#state_${toBeDeleteBoxNum}`).val());
+        if($(`#state_${toBeDeleteBoxNum}`).val() === 'insert'){
+            console.log('YO');
+            $(`#box${toBeDeleteBoxNum}`).remove();
+        }
+
+        if($(`#state_${toBeDeleteBoxNum}`).val() === 'update'){
+            $(`#box${toBeDeleteBoxNum}`).addClass('hidden');
+            $(`#state_${toBeDeleteBoxNum}`).val('delete');
+        }
     });
 
 
 
+
+    // get itemName when itemType was selecting(changing)
     $(document).on('change', 'select[id^=itemType]',function(){
         var selectedItemNameNum = $(this).attr('id').split('_')[1];
         var selectedType = $(this).val();
@@ -90,6 +108,23 @@ $(document).ready(function() {
         $(`select[id=itemName_${selectedItemNameNum}]`).selectpicker('refresh');
     });
 
+    //  produce tranDetail in database
+    console.log(allTranDetailData);
+    var itemType = "";
+    for(i in allTranDetailData){
+        $(`#shoppingRecordBtn_0`).click();
+        itemType = allTranDetailData[i]['itemId'].split('_')[0];
+        $(`select[id=itemType_${i}]`).val(itemType).change(); //  change trigger when itemName is selected and itemType changed at the same Time
+        $(`select[id=itemName_${i}]`).val(allTranDetailData[i]['itemId']);
+        $(`#state_${i}`).val('update');
+
+
+        $(`select[id=itemType_${i}]`).selectpicker('refresh');
+        $(`select[id=itemName_${i}]`).selectpicker('refresh');
+        console.log(i);
+    }
+    $(`textarea[name=description]`).val(tranData['description']);
+    $('#price').val(tranData['price']);
 
 });
 </script>
@@ -117,46 +152,11 @@ $(document).ready(function() {
 
 
                         <form class="form-horizontal" method="post"  action="../controller/userController.php" >
-                            <div id="box0" class="box box-primary">
-                                <!--box-body-->
-                                <div class="box-body">
-                                    <div id="itemTypeDiv" class="form-group">
-                                        <label for="itemType0" class="col-sm-2 control-label">購買類型</label>
-                                        <div class="col-sm-6">
-                                            <select required class="selectpicker itemType" name="itemType_0" id="itemType_0">
-                                                <option value="">請選擇購買類型</option>
-                                                <option value="frame">鏡框</option>
-                                                <option value="glass">鏡片</option>
-                                                <option value="len">隱形眼鏡</option>
-                                                <option value="part">零件(維修)</option>
-                                            </select>
-                                        </div>
-                                    </div>
 
-                                    <div id="itemNameDiv" class="form-group">
-                                        <label for="itemName_0" class="col-sm-2 control-label">品項名稱</label>
-                                        <div class="col-sm-6">
-                                            <select required class="selectpicker itemName" name="itemName_0" id="itemName_0" data-live-search="true" title="請選擇品牌">
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <div id="amountDiv" class="form-group">
-                                        <label for="amount" class="col-sm-2 control-label">數量</label>
-                                        <div class="col-sm-6">
-                                            <input id="amount_0" name="amount_0" class="form-control" type="number" min="1" value="1">
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <!--box-footer-->
+                            <div id="box0" class="box box-primary hidden">
                                 <div class="box-footer" style="text-align: right;">
-                                    <a class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
+                                    <a id= "shoppingRecordBtn_0" class="shoppingRecordBtn btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i></a>
                                 </div>
-                            </div>
-
-                            <div id="box1" class="box box-primary hidden">
                             </div>
 
                             <!--descriptionBox-->
@@ -184,8 +184,9 @@ $(document).ready(function() {
 
                             <div class="box-footer" style="text-align: right;">
                                 <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}" class="btn btn-warning">取消</a>
-                                <input type="hidden" name="action" value="userShoppingAdd">
-                                <input type="hidden" name="userId" value="\{$userId\}">
+                                <input type="hidden" name="action" value="userShoppingRecordEdit">
+                                <input type="hidden" name="userId" value="\{$tranData.userId\}">
+                                <input type="hidden" name="tranId" value="\{$tranData.tranId\}">
                                 <input type="hidden" name="tranDetailLength" value="1">
                                 <button type="submit" class="btn btn-success">更新</button>
                             </div>
