--- a/web/view/store/storeList.html
+++ b/web/view/store/storeList.html
@@ -77,6 +77,7 @@
                                             <th>地址</th>
                                             <th>電話</th>
                                             <th>營業時間</th>
+                                            <th>結束時間</th>
                                             <th>額外說明</th>
                                             <th>建立時間</th>
                                             <th>最後更新時間</th>
@@ -89,7 +90,8 @@
                                             <td>\{$store.storeName\}</td>
                                             <td>\{$store.address\}</td>
                                             <td>\{$store.phoneNumber\}</td>
-                                            <td>\{$store.businessHours\}</td>
+                                            <td>\{$store.businessFrom\}</td>
+                                            <td>\{$store.businessTo\}</td>
                                             <td>\{$store.description\}</td>
                                             <td>\{$store.createTime\}</td>
                                             <td>\{$store.lastUpdateTime\}</td>
