--- a/web/view/store/storeAdd.html
+++ b/web/view/store/storeAdd.html
@@ -3,13 +3,20 @@
 
 <head>
     \{include file="../common/resource.html"\}
-    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
-    </script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"></script>
+    <!-- Bootstrap time Picker -->
+    <link rel="stylesheet" href="../plugins/timepicker/bootstrap-timepicker.min.css">
+    <!-- bootstrap time picker -->
+    <script src="../plugins/timepicker/bootstrap-timepicker.min.js"></script>
     <!-- InputMask -->
     <script src="../plugins/input-mask/jquery.inputmask.js"></script>
     <script>
     $(function() {
         $("[data-mask]").inputmask();
+        //Timepicker
+        $(".timepicker").timepicker({
+            showInputs: false
+        });
     });
     </script>
 </head>
@@ -23,7 +30,7 @@
             </section>
             <section class="content">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -54,9 +61,22 @@
                                         <div class="col-sm-3">
                                             <input id="storePhone" name="storePhone" class="form-control" placeholder="輸入聯絡電話" data-inputmask='"mask": "(99) 999-9999"' data-mask>
                                         </div>
-                                        <label for="businessHours" class="col-sm-2 control-label">營業時間</label>
-                                        <div class="col-sm-4">
-                                            <input id="businessHours" name="businessHours" class="form-control" placeholder="輸入營業時間">
+                                        <label for="businessFrom" class="col-sm-2 control-label ">營業時間</label>
+                                        <div class="col-sm-2 bootstrap-timepicker">
+                                            <div class="input-group">
+                                                <input id="businessFrom" name="businessFrom" class="form-control timepicker" placeholder="營業時間">
+                                                <div class="input-group-addon">
+                                                    <i class="fa fa-clock-o"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-2 bootstrap-timepicker">
+                                            <div class="input-group">
+                                                <input id="businessTo" name="businessTo" class="form-control timepicker" placeholder="結束時間">
+                                                <div class="input-group-addon">
+                                                    <i class="fa fa-clock-o"></i>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div id="descriptionDiv" class="form-group">
