Add point rate change function

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -114,6 +114,19 @@
             <li>
                 <a href="#">
                     <i class="fa fa-th-list"></i>
+                    <span>點數管理</span>
+                    <i class="fa fa-angle-down pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a href="../controller/pointController.php?action=pointEditPrepare">
+                            <i class="fa fa-star"></i>修改點數匯率</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-th-list"></i>
                     <span>文章管理</span>
                     <i class="fa fa-angle-down pull-right"></i>
                 </a>
