Delete img will also delete file

--- a/web/view/frame/frameAdd.html
+++ b/web/view/frame/frameAdd.html
@@ -181,7 +181,7 @@
                                     </div>
                                     <div id="isPrimaryDiv" class="form-group">
                                         <label for="isPrimary" class="col-sm-2 control-label">主打商品</label>
-                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini" name="isPrimary" value=1 >
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" data-toggle="toggle" data-size="mini" name="isPrimary" value=1 >
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
