--- a/web/view/user/userShoppingAdd.html
+++ b/web/view/user/userShoppingAdd.html
@@ -117,6 +117,37 @@ $(document).ready(function() {
 
 
                         <form class="form-horizontal" method="post"  action="../controller/userController.php" >
+
+                            <!--checkState box-->
+                            <div id="checkStateBox" class="box box-primary">
+                                <div class="box-body">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="checkState" value="1" checked>
+                                            <label class="form-check-label" for="exampleRadios1">
+                                                非金錢往來行為
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="checkState" value="2">
+                                            <label class="form-check-label" for="exampleRadios2">
+                                                未付款
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="checkState" value="3">
+                                            <label class="form-check-label" for="exampleRadios3">
+                                                以付訂金
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="checkState" value="4">
+                                            <label class="form-check-label" for="exampleRadios3">
+                                                已結清
+                                            </label>
+                                        </div>
+                                </div>
+                            </div>
+                            
                             <div id="box0" class="box box-primary">
                                 <!--box-body-->
                                 <div class="box-body">
