--- a/web/view/user/userShoppingRecord.html
+++ b/web/view/user/userShoppingRecord.html
@@ -4,6 +4,18 @@
 <head>
     \{include file="../common/resource.html"\}
 <script>
+$(document).ready(function() {
+    var checkStateMapping = {
+        1: '非金錢往來行為',
+        2: '未付款',
+        3: '以付訂金',
+        4: '已結清'
+    };
+    $(".checkState").each(function(){
+        var mapping = checkStateMapping[$(this).attr('value')];
+        $(this).html(mapping);
+    });
+});
     function deleteTran(tranId){
         BootstrapDialog.show({
             title:'提醒',
@@ -59,7 +71,9 @@
 
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">購物紀錄</h3>
+                                <h3 class="box-title" style="text-align: left;">購物紀錄</h3>
+
+                                <h4 class="box-tools">會員點數 \{$point\}</h4>
                             </div>
                             <div class="box-body">
                                 <table class="table table-striped" id="tranListTable">
@@ -78,7 +92,7 @@
                                          \{foreach from=$allTranData item=tran\}
                                             <tr>
                                                 <td>\{$tran.createTime\}</td>
-                                                <td>\{$tran.checkState\}</td>
+                                                <td class="checkState" value="\{$tran.checkState\}"></td>
                                                 <td>\{$tran.price\}</td>
                                                 <td>\{$tran.point\}</td>
                                                 <td>\{$tran.score\}</td>
